node exporter agent

--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -15,3 +15,18 @@ services:
       - /dev/kmsg:/dev/kmsg:ro
       - /etc/machine-id:/etc/machine-id:ro
 
+  node-exporter:
+    image: prom/node-exporter:latest
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    ports:
+      - "9100:9100"
+    hostname: labs
+    volumes:
+      - /proc:/host/proc
+      - /sys:/host/sys
+      - /:/rootfs
+      - /etc/localtime:/etc/localtime
