detail for nginx

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,3 +1,13 @@
 upstream k8sIngress {
     server 192.168.6.17;
 }
+
+upstream k8s-master {
+    server 192.168.6.17;
+}
+
+upstream k8s-worker {
+    server 192.168.6.21;
+    server 192.168.6.22;
+    server 192.168.6.23;
+}
