--- a/nginx/conf.d/vhost/www.example.cc-80.conf
+++ b/nginx/conf.d/vhost/www.example.cc-80.conf
@@ -1,6 +1,6 @@
 server {
     listen      80;
-    server_name www.example.cc;
+    server_name *.example.cc;
 
-    return 301 https://www.example.cc/$request_uri;
+    return 301 https://$http_host$request_uri;
 }
