--- a/nginx/conf.d/server/registry.conf
+++ b/nginx/conf.d/server/registry.conf
@@ -8,8 +8,16 @@ map $upstream_http_docker_distribution_api_version $docker_distribution_api_vers
 }
 
 server {
-    listen  80;
+    listen  443 ssl http2;
     server_name  registry.example.cc;
+
+    ssl_certificate /etc/nginx/certs/example.cc.cer;
+    ssl_certificate_key /etc/nginx/certs/example.cc.key;
+
+    ssl_protocols TLSv1.3 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
 
     # disable any limits to avoid HTTP 413 for large image uploads
     client_max_body_size 0;
@@ -24,6 +32,8 @@ server {
             return 404;
         }
         # To add basic authentication to v2 use auth_basic setting.
+        auth_basic "Registry realm";
+        auth_basic_user_file /etc/nginx/registry.htpasswd;
 
         ## If $docker_distribution_api_version is empty, the header is not added.
         ## See the map directive above where this variable is defined.
@@ -38,4 +48,3 @@ server {
         
     }
 }
-
